@@ -779,3 +779,10 @@ scid-3.7.2
 - Game annotation : book to use is saved (defaults to same book as Book window)
 - HTML export of games (HTML + Javascript) : improved output, better piece sets, no frames (thanks to Charly Founes) 
 - Novag Citrine support : improved interface
+
+[April 2009 ]
+
+scid-3.7.3
+-----------
+Maintenance release of Scid 3.7.2 fixing a bug in search position
+
